# Baxter_PbD

./: README.md  test.txt  test.txt~
baxter_tasker/: CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  LICENSE.TXT  Makefile  README.txt  TODO.txt  package.xml
baxter_tasker/data/: calib_left.json  calib_right.json  current_recording_left  current_recording_left0  current_recording_leftarm_down  current_recording_right  current_recording_right0  plan_01.txt  plan_01.txtright0  plan_01.txt~  reference.urdf  robot.urdf
baxter_tasker/data/angles/: left_hand_init.angles  left_hand_init_away.angles  left_hand_over_0.angles  left_hand_over_1.angles  right_hand_init.angles  right_hand_init_away.angles  right_hand_over_0.angles  right_hand_over_1.angles
baxter_tasker/data/plans/: cover_door_left_0_HL.plan  cover_door_left_0_HP.plan  cover_door_left_0_IH.plan  cover_door_left_0_LH.plan  cover_door_left_0_PH.plan  cover_door_left_10_HL.plan  cover_door_left_10_HP.plan  cover_door_left_10_IH.plan  cover_door_left_10_LH.plan  cover_door_left_10_PH.plan  cover_door_left_11_HL.plan  cover_door_left_11_HP.plan  cover_door_left_11_IH.plan  cover_door_left_11_LH.plan  cover_door_left_11_PH.plan  cover_door_left_12_HL.plan  cover_door_left_12_HP.plan  cover_door_left_12_IH.plan  cover_door_left_12_LH.plan  cover_door_left_12_PH.plan  cover_door_left_13_HL.plan  cover_door_left_13_HP.plan  cover_door_left_13_IH.plan  cover_door_left_13_LH.plan  cover_door_left_13_PH.plan  cover_door_left_14_HL.plan  cover_door_left_14_HP.plan  cover_door_left_14_IH.plan  cover_door_left_14_LH.plan  cover_door_left_14_PH.plan  cover_door_left_15_HL.plan  cover_door_left_15_HP.plan  cover_door_left_15_IH.plan  cover_door_left_15_LH.plan  cover_door_left_15_PH.plan  cover_door_left_1_HL.plan  cover_door_left_1_HP.plan  cover_door_left_1_IH.plan  cover_door_left_1_LH.plan  cover_door_left_1_PH.plan  (+302 more)
baxter_tasker/data/tasks/: _globals.task.py  coverDoor.task.py  coverSmall.task.py  execute.task.py  preparePickItem.task.py  scenarioConsignment.task.py  scenarioConsignment2.task.py  select_item.task.py
baxter_tasker/doc/: Makefile  baxter_helper.rst  baxter_helper_abstract_limb.rst  baxter_helper_moveit_limb.rst  baxter_helper_tasker.rst  baxter_image_composer.rst  baxter_image_text_displayer.rst  baxter_tasker_main.rst  baxter_urdf_creator.rst  conf.py  environment_config.txt  generate_plans.rst  high_level_movement.rst  interface_robot.txt  interface_workstation.txt  joint_trajectory_action_server.rst  manifest.yaml  monitor.rst  quickstart.txt
baxter_tasker/doc/html/: baxter_behaviors.html  baxter_helper.html  baxter_helper_abstract_limb.html  baxter_helper_frame.html  baxter_helper_menu.html  baxter_helper_moveit_limb.html  baxter_helper_simple_limb.html  baxter_helper_tasker.html  baxter_image_composer.html  baxter_image_text_displayer.html  baxter_scenarios.html  baxter_scene.html  baxter_tasker_main.html  baxter_urdf_creator.html  boxrenderer.html  generate_plans.html  genindex.html  gripper.html  high_level_movement.html  index-msg.html  index.html  joint_trajectory_action_hr.html  joint_trajectory_action_server.html  limb.html  modules.html  monitor.html  objects.inv  py-modindex.html  python_text.html  search.html  searchindex.js
baxter_tasker/doc/html/.doctrees/: baxter_behaviors.doctree  baxter_helper.doctree  baxter_helper_abstract_limb.doctree  baxter_helper_frame.doctree  baxter_helper_menu.doctree  baxter_helper_moveit_limb.doctree  baxter_helper_simple_limb.doctree  baxter_helper_tasker.doctree  baxter_image_composer.doctree  baxter_image_text_displayer.doctree  baxter_scenarios.doctree  baxter_scene.doctree  baxter_tasker_main.doctree  baxter_urdf_creator.doctree  boxrenderer.doctree  environment.pickle  generate_plans.doctree  gripper.doctree  high_level_movement.doctree  index.doctree  joint_trajectory_action_hr.doctree  joint_trajectory_action_server.doctree  limb.doctree  modules.doctree  monitor.doctree  python_text.doctree
baxter_tasker/doc/html/_modules/: baxter_behaviors.html  baxter_helper.html  baxter_helper_abstract_limb.html  baxter_helper_frame.html  baxter_helper_menu.html  baxter_helper_moveit_limb.html  baxter_helper_simple_limb.html  baxter_helper_tasker.html  baxter_image_composer.html  baxter_image_text_displayer.html  baxter_scenarios.html  baxter_scene.html  baxter_tasker_main.html  baxter_urdf_creator.html  boxrenderer.html  generate_plans.html  gripper.html  high_level_movement.html  index.html  joint_trajectory_action_hr.html  joint_trajectory_action_server.html  limb.html  monitor.html  python_text.html
baxter_tasker/doc/html/_sources/: baxter_behaviors.txt  baxter_helper_frame.txt  baxter_helper_menu.txt  baxter_helper_simple_limb.txt  baxter_scenarios.txt  baxter_scene.txt  boxrenderer.txt  gripper.txt  index.txt  joint_trajectory_action_hr.txt  limb.txt  modules.txt  (+1 more)
baxter_tasker/launch/: baxter_tasker_main.launch  baxter_ui_test.launch  monitor.launch  moveit_baxter.launch  moveit_baxter_norviz.launch  planning_context.launch
baxter_tasker/msg/: BlockColour.msg  BlockColour.msg~  BlockPosition.msg~  LandmarkDistance.msg
baxter_tasker/scripts/: baxter_action.py  baxter_action.py~  baxter_behaviors.py  baxter_behaviors.py~  baxter_camera_setup.py  baxter_camera_setup.py~  baxter_helper.py  baxter_helper.py~  baxter_helper_abstract_limb.py  baxter_helper_abstract_limb.py~  baxter_helper_frame.py  baxter_helper_menu.py  baxter_helper_menu.py~  baxter_helper_moveit_limb.py  baxter_helper_simple_limb.py  baxter_helper_simple_limb.py~  baxter_helper_tasker.py  baxter_image_composer.py  baxter_image_text_displayer.py  baxter_learner.py  baxter_learner.py~  baxter_locator-2.py  baxter_locator.py  baxter_locator.py~  baxter_pickup.py~  baxter_scenarios.py  baxter_scenarios.py~  baxter_scene.py  baxter_scene.py~  baxter_tasker_main.py  baxter_tasker_main.py~  baxter_urdf_creator.py  boxrenderer.py  camera.py  generate_plans.py  gripper.py  header.txt  high_level_movement.py  high_level_movement.py~  joint_trajectory_action_hr.py  (+9 more)
baxter_tasker/urdf/: baxter.urdf
(+9 files in other folders)
