<?xml version="1.0"?>
<package>
  <name>baxter_tasker</name>
  <version>0.0.0</version>
  <description>Generic package for demos with Baxter. Both arms can be used in parallel.
     Uses Baxter screen and buttons for all operations</description>

  <maintainer email="sb@humarobotics.com">Sven Bock</maintainer>
  <license>Copyright</license>

  <!-- <url type="website">http://ros.org/wiki/baxter_pickplace</url> -->

  <author email="contact@humarobotics.com">HumaRobotics</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
    
  
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>hr_helper</build_depend>

  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
    
    <run_depend>hr_helper</run_depend>
  

  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
